# minimal-binary-wheel-example

./: .gitignore  README.md  pyproject.toml  tasks.py
.github/workflows/: python-publish.yml
binary_wheel_example/: __init__.py
binary_wheel_example/templates/: index.html
